Adjust SM CSIT to use common distribution
This way there is no need to specify feature repo version.

Change-Id: I1b4a374821e8d494eef9ed1a41fa8fda87319108
Signed-off-by: Luis Gomez <ecelgp@gmail.com>

--- a/jjb/sxp/sxp-csit-clustering.yaml
+++ b/jjb/sxp/sxp-csit-clustering.yaml
@@ -15,13 +15,15 @@
       - neon:
           branch: 'master'
           trigger-jobs: '{project}-merge-{stream}'
+          karaf-version: 'odl' 
           # yamllint disable-line rule:line-length
-          repo-url: 'mvn:org.opendaylight.sxp/features-sxp/1.8.0-SNAPSHOT/xml/features'
+          repo-url: 'mvn:org.opendaylight.sxp/features-sxp//xml/features'
       - fluorine:
           branch: 'stable/fluorine'
           trigger-jobs: '{project}-merge-{stream}'
+          karaf-version: 'odl' 
           # yamllint disable-line rule:line-length
-          repo-url: 'mvn:org.opendaylight.sxp/features-sxp/1.7.0-SNAPSHOT/xml/features'
+          repo-url: 'mvn:org.opendaylight.sxp/features-sxp//xml/features'
       - oxygen:
           branch: 'stable/oxygen'
 
